# bingo-fc

./: Cargo.toml  flash.sh
.cargo/: config.toml
bingofc-derive/: Cargo.toml
bingofc-derive/src/: lib.rs
impl/speedybeef405/: Cargo.toml
impl/speedybeef405/src/: main.rs
src/: bmi270.rs  lib.rs  main.rs  state.rs
src/ahrs/: madgwick.rs  mod.rs
src/interface/: imu.rs
src/log/: mod.rs  usb_serial.rs
src/math/: mod.rs  quat.rs  vec.rs
src/peripheral/: mod.rs
src/peripheral/bmi270/: mod.rs  regs.rs
src/util/: mod.rs  shared_delay.rs
