[package]
name = "bingo-fc"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bingo-fc"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
embedded-hal = "1.0"
embedded-dma = "0.2"
embedded-hal-bus = "0.3"

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
panic-halt = "0.2"

usb-device = "0.3"
usbd-serial = "0.2"

synopsys-usb-otg = "0.4"

bitbybit = "1.3"
arbitrary-int = "1.3"

bingofc-derive = { path = "./bingofc-derive" }

[dependencies.stm32f4xx-hal]
version = "0.22"
features = ["stm32f405", "usb_fs"]

[target.release]
codegen-units = 1
opt-level = 's'
