[package]
name = "bingo-fc"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0"
embedded-dma = "0.2"
embedded-hal-bus = "0.3"

usb-device = "0.3"
usbd-serial = "0.2"

bitbybit = "1.3"
arbitrary-int = "1.3"

bingofc-derive = { path = "./bingofc-derive" }

num-traits = { version = "0.2", default-features = false }
