[package]
name = "bingo-fc"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
embedded-hal = "1.0"
embedded-dma = "0.2"
embedded-hal-bus = "0.3"

usb-device = "0.3"
usbd-serial = "0.2"

bitbybit = "1.3"
arbitrary-int = "1.3"

bingofc-derive = { path = "./bingofc-derive" }

nalgebra = { version = "0.33", default-features = false, features = ["macros"] }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
nalgebra = { version = "0.33", default-features = false, features = ["std", "macros"] }
